add home page, navbar, register page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <% unless %w[/register /login].include? request.env['PATH_INFO'] %>
+      <%= render 'shared/navbar' %>
+    <% end %>
+    
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
