--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,3 +1,3 @@
 <% if object.errors.any? %>
-  <div class="alert alert-danger"><%= object.errors.full_messages.first %></div>
+  <div class="alert alert-danger"><%= object.errors.full_messages.last %></div>
 <% end %>
