--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.nav-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.dropdown-item {
+  a {
+    text-decoration: none;
+    color: black;
+  }
+}
