--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,18 @@
 <%= form_for @user do |f| %>
   <%= render "shared/error_messages", object: f.object %>
 
-  <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+  <%= f.text_field :name, class: "form-control",
+    placeholder: true %>
 
-  <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
+  <%= f.email_field :email, class: "form-control", 
+    placeholder: true %>
   
-  <%= f.password_field :password, 
-    class: "form-control",
-    placeholder: "Password" %>
+  <%= f.password_field :password, class: "form-control", 
+    placeholder: true %>
 
-  <%= f.password_field :password_confirmation, 
-    class: "form-control",
-    placeholder: "Confirm Password" %>
+  <%= f.password_field :password_confirmation, class: "form-control",
+    placeholder: true %>
 
-  <%= f.submit "Register", class: "btn btn-warning form-control" %>
+  <%= f.submit t("commons.register"), class: "btn btn-warning form-control" %>
 
 <% end %>
