fix: save user email to cookie for reseting

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -2,5 +2,5 @@
 <%= t("password_resets.mail.upper_body") %>
 <%= t("password_resets.mail.link") %>
 <%= link_to "link",
-    edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
+    edit_password_reset_url(id: @user.reset_token) %>
 <%= t("password_resets.mail.body") %>
