--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -3,6 +3,6 @@
 <p>
   <%= t("password_resets.mail.link") %>
   <%= link_to "link",
-    edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
+    edit_password_reset_url(id: @user.reset_token) %>
   <%= t("password_resets.mail.body") %>
 </p>
