fix: remove casting id to bson object & style: move colors to variable file

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,10 @@
-$info: #3399ff;
+@import 'variables';
+$info: $new_info;
 @import "bootstrap/scss/bootstrap";
 
 body {
   margin-top: 80px;
-  background: #f8da88;
+  background: $bg-main;
 }
 
 .flash-msg {
