--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .nav-icon {
   width: 30px;
   height: 30px;
@@ -6,7 +8,7 @@
 .dropdown-item {
   a {
     text-decoration: none;
-    color: black;
+    color: $black;
   }
 }
 
