--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .form-container {
   background-image: url('big6.jpg');
   background-size: cover;
@@ -37,7 +39,7 @@
       content: "";
       height: 0.5em;
       width: 45%;
-      border-top: 1px solid white;
+      border-top: 1px solid $white;
       position: absolute;
       bottom: 25%;
       left: -50%;
@@ -48,7 +50,7 @@
       content: "";
       height: 0.5em;
       width: 45%;
-      border-top: 1px solid white;
+      border-top: 1px solid $white;
       position: absolute;
       bottom: 25%;
       left: 14%;
