fix: move to logic from view to model & style: indent with 2 spaces

--- a/app/views/static_pages/_post.html.erb
+++ b/app/views/static_pages/_post.html.erb
@@ -22,7 +22,7 @@
   <div class="card-footer foot">
     <span class="card-text text">
       <em><%= t("posts.create.created_at") %>:</em>
-      <b><%= object.created_at.localtime.strftime("%H:%M:%S - %d/%m/%Y") %></b>
+      <b><%= object.local_created_at %></b>
     </span>
     &nbsp;&nbsp;&nbsp;
     <span class="card-text text">
