feat: update & delete post

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,6 +8,6 @@
     @tags, 'id', 'label', '1'), multiple: true, 
     prompt: "---#{t("posts.create.select_tag")}---", class: "form-select" %>
 
-  <%= f.submit t("posts.create.btn_text"), class: "btn btn-dark form-control" %>
+  <%= f.submit btn_text, class: "btn btn-dark form-control" %>
 
 <% end %>
