--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="post-show-container">
   <div class="card text-white bg-info border-dark mb-3">
-    <div class="card-header">
+    <div class="card-header d-flex align-items-center">
       <% unless @post.tags.empty? %>
         <span><b><%= t("commons.tag") %></b>:&nbsp;&nbsp;&nbsp;</span>
         <% @post.tags.each do |tag| %>
@@ -8,6 +8,14 @@
             <%= tag.label %>
           </span>
         <% end %>
+      <% end %>
+      <% if authorized_with?(@post.user) %>
+        <div class="d-flex justify-content-end ms-auto">
+          <%= link_to t("posts.update.title"), edit_post_path,
+            class: "btn btn-warning me-3" %>
+          <%= link_to t("posts.delete.title"), post_path(@post), method: :delete,
+            class: "btn btn-danger" %>
+        </div>
       <% end %>
     </div>
       
