style: change card head & body color

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="post-show-container">
-  <div class="card text-white bg-info border-dark mb-3">
+  <div class="card text-dark bg-info border-dark mb-3">
     <div class="card-header d-flex align-items-center flex-wrap">
       <% unless @post.tags.empty? %>
         <span><b><%= t("commons.tag") %></b>:&nbsp;&nbsp;&nbsp;</span>
