--- a/app/views/static_pages/_post.html.erb
+++ b/app/views/static_pages/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="card text-white bg-info border-dark mb-3">
+<div class="card text-dark bg-info border-dark mb-3">
   <div class="card-header d-flex align-items-center flex-wrap">
     <% unless object.tags.empty? %>
       <div>
