style: add fields for title & fix some display

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,7 @@
     </div>
       
     <div class="card-body">
+      <h5 class="card-title"><%= @post.title %></h5>
       <p class="card-text text-dark"><%= @post.content %></p>
     </div>
     <div class="card-footer foot">
