--- a/app/views/static_pages/_post.html.erb
+++ b/app/views/static_pages/_post.html.erb
@@ -17,7 +17,8 @@
   </div>
     
   <div class="card-body">
-    <p class="card-text text-dark"><%= object.content %></p>
+    <h5 class="card-title"><%= object.title %></h5>
+    <p class="card-text text-dark"><%= object.description %></p>
   </div>
   <div class="card-footer foot">
     <span class="card-text text">
