--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,9 @@
 <%= form_for @post do |f| %>
   <%= render "shared/error_messages", object: f.object %>
-
+  
+  <%= f.text_field :title, class: "form-control",
+    placeholder: true %>
+  
   <%= f.text_area :content, class: "form-control",
     placeholder: true %>
 
