--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,13 @@
 <div class="home-container">
+  <div class="mb-5">
+    <%= render 'search_form' %>
+  </div>
   <% unless @posts.empty? %>
     <% @posts.each do |post| %>
       <%= render 'static_pages/post', object: post %>
     <% end %>
   <% else %>
-    <h1>There is no post!</h1>
+    <h1><%= t("posts.not_found") %></h1>
   <% end %>
   <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
 </div>
