style: add style for tag when clicked

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,7 +24,13 @@
  </div>
 </div>
 <script>
-  const urlParams = new URLSearchParams(window.location.search);
-  $('#search_search').val(urlParams.get('search'))
-  $('#search_search').focus()
+  $(document).ready(function() {
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get('search')) {
+      $('#search_search').val(urlParams.get('search'));
+      $('#search_search').focus();
+    }
+    tag_clicked = $(`a:contains(${urlParams.get('filter')})`);
+    tag_clicked.addClass('bg-dark text-white');
+  })
 </script>
