--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,4 +1,4 @@
 <div class="create-form-container">
-  <h2 class=""><%= t("tags.create.title") %></h2>
+  <h2><%= t("tags.create.title") %></h2>
   <%= render "form" %>
 </div>
