--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,11 +25,11 @@
         </li>
         <li class="nav-item ms-5 me-3">
           <%= link_to t("posts.create.title"), new_post_path, 
-           class: "btn btn-primary" %>
+           class: "btn btn-primary text-white" %>
         </li>
         <li class="nav-item">
           <%= link_to t("tags.create.title"), new_tag_path,
-           class: "btn btn-primary" %>
+           class: "btn btn-primary text-white" %>
         </li>
         
       </ul>
