--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="col-md-3">
       <%= f.submit t("static_pages.home.search"), name: nil,
-        class: "btn btn-primary form-control" %>
+        class: "btn btn-primary form-control text-white" %>
     </div>
   </div>
 <% end %>
