--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,8 @@
-$new-info: #3399ff;
-$bg-main: #f8da88;
+$new-info: #33a1fd;
+$new-primary: #2176ff;
+$new-dark: #31393c;
+$new-warning: #f79824;
+$bg-main: #f8d77be0;
 $black: #000;
 $white: #fff;
 $light-blue: #82b8ed;
