--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,8 @@
 @import 'variables';
-$info: $new_info;
+$info: $new-info;
+$dark: $new-dark;
+$warning: $new-warning;
+$primary: $new-primary;
 @import "bootstrap/scss/bootstrap";
 
 body {
