--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <%= link_to image_tag("baymax_icon", class: " nav-icon"), 
+    <%= link_to image_tag("baymax_icon.png", class: " nav-icon"), 
       root_path, 
       class: "navbar-brand" %>
     <button
