fix: config prodution mongodb

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -76,7 +76,7 @@
               data-bs-toggle="dropdown" 
               aria-expanded="false">
               <%= t("navbar.lang.title") %>
-              <%= image_tag "translate" %>
+              <%= image_tag "translate.svg" %>
             </a>
 
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
