fix: image path mongo heroku

--- a/app/assets/stylesheets/password_resets.scss
+++ b/app/assets/stylesheets/password_resets.scss
@@ -1,5 +1,5 @@
 .form-container-reset {
-  background-image: url('big6_left.jpg');
+  background-image: image-url('big6_left.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 8px;
