--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .form-container {
-  background-image: url('big6.jpg');
+  background-image: image-url('big6.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 8px;
